# amadeus-mcp

./: .gitignore  Cargo.toml  README.md  amadeus-api.yaml  test_block.sh  test_mcp.sh  test_stats.sh  wrangler.toml
src/: lib.rs  main.rs  server.rs  wasm.rs
src/blockchain/: client.rs  client_wasm.rs  error.rs  mod.rs  types.rs
src/wasm/: mint.rs  mod.rs  tx.rs
